--- a/src/main/resources/templates/bmi-calculator.html
+++ b/src/main/resources/templates/bmi-calculator.html
@@ -195,10 +195,10 @@
                         <form id="bmiForm">
                             <div class="row">
                                 <div class="col-sm-6">
-                                    <input type="number" id="height" name="height" placeholder="Height / cm">
+                                    <input type="number" min="0" step="0.1" id="height" name="height" placeholder="Height / cm">
                                 </div>
                                 <div class="col-sm-6">
-                                    <input type="number" id="weight" name="weight" placeholder="Weight / kg">
+                                    <input type="number" min="0" step="0.1" id="weight" name="weight" placeholder="Weight / kg">
                                 </div>
                                 <div class="col-sm-6">
                                     <input type="number" id="age" name="age" placeholder="Age">
