--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -154,18 +154,16 @@
                 <div class="col-lg-8 p-0">
                     <div class="blog-item">
                         <div class="bi-pic">
-                            <img src="img/blog/blog-1.jpg" alt="">
+                            <img src="img/blog/baki2.png" alt="">
                         </div>
                         <div class="bi-text">
-                            <h5><a href="/blog-details">Vegan White Peach Mug Cobbler With Cardam Vegan White Peach Mug
-                                    Cobbler...</a></h5>
+                            <h5><a href="/blog-details">Use That Chip On Your Shoulder To Be Great</a></h5>
                             <ul>
-                                <li>by Admin</li>
-                                <li>Aug,15, 2019</li>
-                                <li>20 Comment</li>
+                                <li>by Amiel De Los Reyes</li>
+                                <li>Oct 20, 2023</li>
+<!--                                <li>20 Comment</li>-->
                             </ul>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incididunt ut
-                                labore et dolore magna aliqua accumsan lacus facilisis.</p>
+                            <p>We all have that desire to do great things. But what really pushes us to do the work every single day is that chip on our shoulders. That could be a setback, failure, an accident...</p>
                         </div>
                     </div>
                     <div class="blog-item">
@@ -318,35 +316,6 @@
     </section>
     <!-- Blog Section End -->
 
-<!-- Get In Touch Section Begin -->
-<div class="gettouch-section">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="gt-text">
-                    <i class="fa fa-map-marker"></i>
-                    <p>Manila, Philippines</p>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="gt-text">
-                    <i class="fa fa-mobile"></i>
-                    <ul>
-                        <li>+63 956 650 1830</li>
-                        <!--                            <li>125-668-886</li>-->
-                    </ul>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="gt-text email">
-                    <i class="fa fa-envelope"></i>
-                    <p>gritdominate@gmail.com</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Get In Touch Section End -->
 
 <!-- Footer Section Begin -->
 <section class="footer-section" th:replace="footer">
