--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Gym, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact Us - Grit Dominate</title>
+    <title>Registration - Grit Dominate</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
@@ -58,7 +58,7 @@
                     <!--                        <li><a href="/404">404</a></li>-->
                 </ul>
             </li>
-            <li><a href="/contact">Contact</a></li>
+            <li><a href="/contact">Registration</a></li>
         </ul>
     </nav>
     <div id="mobile-menu-wrap"></div>
@@ -134,11 +134,11 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="breadcrumb-text">
-                        <h2>Contact Us</h2>
+                        <h2>Registration</h2>
                         <div class="bt-option">
                             <a href="/index">Home</a>
                             <a href="#">Pages</a>
-                            <span>Contact us</span>
+                            <span>Registration</span>
                         </div>
                     </div>
                 </div>
@@ -153,7 +153,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="section-title contact-title">
-                        <span>Contact Us</span>
+                        <span>Registration</span>
                         <h2>GET IN TOUCH</h2>
                     </div>
                     <div class="contact-widget">
