--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -58,7 +58,7 @@
 <!--                        <li><a href="/404">404</a></li>-->
                     </ul>
                 </li>
-                <li><a href="/contact">Contact</a></li>
+                <li><a href="/contact">Registration</a></li>
             </ul>
         </nav>
         <div id="mobile-menu-wrap"></div>
@@ -102,7 +102,7 @@
 <!--                                    <li><a href="/404">404</a></li>-->
                                 </ul>
                             </li>
-                            <li><a href="contact">Contact</a></li>
+                            <li><a href="contact">Registration</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -467,36 +467,6 @@
 <!--        </div>-->
 <!--    </section>-->
     <!-- Team Section End -->
-
-    <!-- Get In Touch Section Begin -->
-    <div class="gettouch-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="gt-text">
-                        <i class="fa fa-map-marker"></i>
-                        <p>Manila, Philippines</p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="gt-text">
-                        <i class="fa fa-mobile"></i>
-                        <ul>
-                            <li>+63 956 650 1830</li>
-<!--                            <li>125-668-886</li>-->
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="gt-text email">
-                        <i class="fa fa-envelope"></i>
-                        <p>gritdominate@gmail.com</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Get In Touch Section End -->
 
     <!-- Footer Section Begin -->
     <section class="footer-section" th:replace="~{footer}">
