--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -78,7 +78,7 @@
           <!--                        <li><a href="/404">404</a></li>-->
         </ul>
       </li>
-      <li><a href="/contact">Contact</a></li>
+      <li><a href="/contact">Registration</a></li>
     </ul>
   </nav>
   <div id="mobile-menu-wrap"></div>
@@ -122,7 +122,7 @@
                 <!--                                    <li><a href="/404">404</a></li>-->
               </ul>
             </li>
-            <li><a href="contact">Contact</a></li>
+            <li><a href="contact">Registration</a></li>
           </ul>
         </nav>
       </div>
@@ -519,7 +519,7 @@
             <li><a href="#">About</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Programs</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">Registration</a></li>
           </ul>
         </div>
       </div>
@@ -530,7 +530,7 @@
             <li><a href="#">Login</a></li>
             <li><a href="#">My account</a></li>
             <li><a href="#">Subscribe</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">Registration</a></li>
           </ul>
         </div>
       </div>
