--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -58,7 +58,7 @@
                     <!--                        <li><a href="/404">404</a></li>-->
                 </ul>
             </li>
-            <li><a href="/contact">Contact</a></li>
+            <li><a href="/contact">Registration</a></li>
         </ul>
     </nav>
     <div id="mobile-menu-wrap"></div>
@@ -102,7 +102,7 @@
                                 <!--                                    <li><a href="/404">404</a></li>-->
                             </ul>
                         </li>
-                        <li><a href="contact">Contact</a></li>
+                        <li><a href="contact">Registration</a></li>
                     </ul>
                 </nav>
             </div>
