--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -394,6 +394,16 @@
             <div class="gs-item grid-wide set-bg" data-setbg="img/gympic5.png">
                 <a href="img/gympic5.png" class="thumb-icon image-popup"><i class="fa fa-picture-o"></i></a>
             </div>
+            <div class="gs-item grid-wide set-bg" data-setbg="img/j1.png">
+                <a href="img/gympic5.png" class="thumb-icon image-popup"><i class="fa fa-picture-o"></i></a>
+            </div>
+            <div class="gs-item set-bg" data-setbg="img/j2.png">
+                <a href="img/gympic2.png" class="thumb-icon image-popup"><i class="fa fa-picture-o"></i></a>
+            </div>
+            <div class="gs-item set-bg" data-setbg="img/j4.png">
+                <a href="img/1gympic.png" class="thumb-icon image-popup"><i class="fa fa-picture-o"></i></a>
+            </div>
+
         </div>
     </div>
     <!-- Gallery Section End -->
