--- a/src/main/resources/templates/gallery.html
+++ b/src/main/resources/templates/gallery.html
@@ -178,6 +178,15 @@
             <div class="gs-item set-bg" data-setbg="img/leg3.jpg">
                 <a href="img/leg3.jpg" class="thumb-icon image-popup"><i class="fa fa-picture-o"></i></a>
             </div>
+            <div class="gs-item set-bg" data-setbg="img/j2.png">
+                <a href="img/j2.png" class="thumb-icon image-popup"><i class="fa fa-picture-o"></i></a>
+            </div>
+            <div class="gs-item set-bg" data-setbg="img/j4.png">
+                <a href="img/j4.png" class="thumb-icon image-popup"><i class="fa fa-picture-o"></i></a>
+            </div>
+            <div class="gs-item grid-wide set-bg" data-setbg="img/j1.png">
+                <a href="img/j1.png" class="thumb-icon image-popup"><i class="fa fa-picture-o"></i></a>
+            </div>
         </div>
     </div>
     <!-- Gallery Section End -->
