--- a/src/main/resources/templates/services.html
+++ b/src/main/resources/templates/services.html
@@ -228,7 +228,7 @@
     <!-- Banner Section End -->
 
 <!-- Pricing Section Begin -->
-<section class="pricing-section spad" id="pricing">
+<section class="pricing-section spad">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -243,10 +243,11 @@
                 <div class="ps-item">
                     <h3>Ready-To-Go Program</h3>
                     <div class="pi-price">
-                        <h2>&#8369;499.99</h2>
-                        <span>SINGLE PROGRAM (16-Weeks)</span>
+                        <h2><s>&#8369;1500</s> &#8369;499.99 </h2>
+                        <span>MONTHLY PROGRAM (4-16 Weeks)</span>
                     </div>
                     <ul>
+                        <li><b>Package:</b> A 4-week monthly workout plan with monthly nutrition plan and unlimited consultation</li>
                         <li><b>Start Right Away:</b> You can begin exercising right now with a plan ready for you.</li>
                         <li><b>Easy to Follow:</b> The exercises are not hard to do, and you don't need to think too much.</li>
                         <li><b>Easy Instructions:</b> They tell you how to do each exercise in a simple way.</li>
@@ -260,12 +261,13 @@
             </div>
             <div class="col-lg-4 col-md-8">
                 <div class="ps-item">
-                    <h3>Ready-to-Go Jumpstart with Consultation Program</h3>
+                    <h3>3-Month Ready-to-Go Jumpstart</h3>
                     <div class="pi-price">
-                        <h2>&#8369;599.99</h2>
+                        <h2><s>&#8369;3500</s> &#8369;1,249.99 </h2>
                         <span>SINGLE PROGRAM WITH CONSULTATION</span>
                     </div>
                     <ul>
+                        <li><b>Package:</b> A 3-month workout plan with monthly nutrition plan and unlimited consultation.</li>
                         <li><b>Instant Workout Plan:</b> Start exercising right away with a plan ready for you.</li>
                         <li><b>Personal Consultation:</b> Get one-on-one guidance to help you succeed.</li>
                         <li><b>Different Kinds of Exercise:</b> You'll do different exercises to keep it interesting.</li>
@@ -279,12 +281,16 @@
             </div>
             <div class="col-lg-4 col-md-8">
                 <div class="ps-item">
-                    <h3>1-on-1 Fit Journey Program</h3>
+                    <h3>1-on-1 In-Person Fit Journey Program</h3>
                     <div class="pi-price">
-                        <h2>&#8369;649.99</h2>
-                        <span>PER 1 SESSION (&#8369;500 for bundle)</span>
+                        <h2><s>&#8369;18,000</s> &#8369;14,999.99</h2>
+                        <span>&#8369;500 PER 1-HOUR SESSION</span>
                     </div>
                     <ul>
+                        <li><b>Package:</b>A monthly workout plan with monthly nutrition plan, as well as in-person session.</li>
+                        <li><b>Bundle:</b> &#8369;14,999.99 for 30 1-hour in-person sessions</li>
+                        <li><b>Bundle:</b> &#8369;7,499.99 for 15 1-hour in-person sessions</li>
+                        <li><b>Custom Workout Plan:</b> Receive a workout plan designed just for you.</li>
                         <li><b>Custom Workout Plan:</b> Receive a workout plan designed just for you.</li>
                         <li><b>Dietary Tips:</b> Basic nutrition advice to support your fitness goals.</li>
                         <li><b>Flexible Scheduling:</b> Arrange sessions to fit your availability. Meet me at least once a week.</li>
