--- a/src/main/resources/templates/blog-details.html
+++ b/src/main/resources/templates/blog-details.html
@@ -210,15 +210,15 @@
                                 <img src="img/blog/details/blog-profile.jpg" alt="">
                             </div>
                             <div class="ba-text">
-                                <h5>Amiel De Los Reyes</h5>
+
+                                </div><h5>Amiel De Los Reyes</h5>
                                 <p>I am an athlete who thrives on pushing my physical limits, an entrepreneur with a passion for creating and innovating, a software engineer adept at solving complex problems with code, and an aspiring businessman with a hunger for success and making a lasting impact in the business world.</p>
                                 <div class="bp-social">
                                     <a href="https://www.facebook.com/amielxavier.delosreyes/"><i class="fa fa-facebook"></i></a>
-<!--                                    <a href="#"><i class="fa fa-twitter"></i></a>-->
-<!--                                    <a href="#"><i class="fa fa-google-plus"></i></a>-->
+                                    <!--                                    <a href="#"><i class="fa fa-twitter"></i></a>-->
+                                    <!--                                    <a href="#"><i class="fa fa-google-plus"></i></a>-->
                                     <a href="https://www.instagram.com/amiel.delosreyes/"><i class="fa fa-instagram"></i></a>
-<!--                                    <a href="#"><i class="fa fa-youtube-play"></i></a>-->
-                                </div>
+                                    <!--                                    <a href="#"><i class="fa fa-youtube-play"></i></a>-->
                             </div>
                         </div>
 <!--                        <div class="row">-->
