--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -171,70 +171,60 @@
                             <img src="img/blog/blog-2.jpg" alt="">
                         </div>
                         <div class="bi-text">
-                            <h5><a href="/blog-details">Vegan White Peach Mug Cobbler With Cardam Vegan White Peach Mug
-                                    Cobbler...</a></h5>
+                            <h5><a href="/blog-details2">Nutrition Tips for Muscle Mass and Strength</a></h5>
                             <ul>
-                                <li>by Admin</li>
-                                <li>Aug,15, 2019</li>
-                                <li>20 Comment</li>
+                                <li>by Human Kinetics</li>
+                                <li>Aug 11, 2023</li>
+<!--                                <li>20 Comment</li>-->
                             </ul>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incididunt ut
-                                labore et dolore magna aliqua accumsan lacus facilisis.</p>
+                            <p>The general nutrition rules for maximizing muscle mass and strength gains are fairly similar. Building muscle mass and muscle strength go side by side to some degree...</p>
                         </div>
                     </div>
                     <div class="blog-item">
                         <div class="bi-pic">
-                            <img src="img/blog/blog-3.jpg" alt="">
+                            <img src="img/blog/ting.png" alt="">
                         </div>
                         <div class="bi-text">
-                            <h5><a href="/blog-details">Vegan White Peach Mug Cobbler With Cardam Vegan White Peach Mug
-                                    Cobbler...</a></h5>
+                            <h5><a href="/blog-details3">Effective HIIT Workouts for Fat Loss</a></h5>
                             <ul>
-                                <li>by Admin</li>
-                                <li>Aug,15, 2019</li>
-                                <li>20 Comment</li>
+                                <li>by Amiel De Los Reyes</li>
+                                <li>October 21, 2023</li>
+<!--                                <li>20 Comment</li>-->
                             </ul>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incididunt ut
-                                labore et dolore magna aliqua accumsan lacus facilisis.</p>
+                            <p>High-Intensity Interval Training (HIIT) has gained immense popularity in the fitness world, and for good reason...</p>
                         </div>
                     </div>
                     <div class="blog-item">
                         <div class="bi-pic">
-                            <img src="img/blog/blog-4.jpg" alt="">
+                            <img src="img/blog/mind.png" alt="">
                         </div>
                         <div class="bi-text">
-                            <h5><a href="/blog-details">Vegan White Peach Mug Cobbler With Cardam Vegan White Peach Mug
-                                    Cobbler...</a></h5>
+                            <h5><a href="/blog-details4">Mental Toughness and Fitness Success: The Power of Your Mind...</a></h5>
                             <ul>
-                                <li>by Admin</li>
-                                <li>Aug,15, 2019</li>
-                                <li>20 Comment</li>
+                                <li>by Amiel De Los Reyes</li>
+                                <li>October 21, 2023</li>
                             </ul>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incididunt ut
-                                labore et dolore magna aliqua accumsan lacus facilisis.</p>
+                            <p>When we talk about achieving fitness success, we often focus on physical aspects like exercise routines and diet plans... </p>
                         </div>
                     </div>
                     <div class="blog-item">
                         <div class="bi-pic">
-                            <img src="img/blog/blog-5.jpg" alt="">
+                            <img src="img/blog/tulog.png" alt="">
                         </div>
                         <div class="bi-text">
-                            <h5><a href="/blog-details">Vegan White Peach Mug Cobbler With Cardam Vegan White Peach Mug
-                                    Cobbler...</a></h5>
+                            <h5><a href="/blog-details5">The Role of Sleep in Fitness and Recovery...</a></h5>
                             <ul>
-                                <li>by Admin</li>
-                                <li>Aug,15, 2019</li>
-                                <li>20 Comment</li>
+                                <li>by Amiel De Los Reyes</li>
+                                <li>October 21, 2023</li>
                             </ul>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incididunt ut
-                                labore et dolore magna aliqua accumsan lacus facilisis.</p>
+                            <p>When it comes to achieving your fitness goals, you might focus on your workout routines, nutrition, and supplements...</p>
                         </div>
                     </div>
                     <div class="blog-pagination">
                         <a href="#">1</a>
-                        <a href="#">2</a>
-                        <a href="#">3</a>
-                        <a href="#">Next</a>
+<!--                        <a href="#">2</a>-->
+<!--                        <a href="#">3</a>-->
+<!--                        <a href="#">Next</a>-->
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-8 p-0">
