--- a/src/main/resources/templates/services.html
+++ b/src/main/resources/templates/services.html
@@ -285,12 +285,11 @@
                     <div class="pi-price">
                         <h2><s>&#8369;18,000</s> &#8369;14,999.99</h2>
                         <span>&#8369;500 PER 1-HOUR SESSION</span>
-                    </div>
+                    </div>12
                     <ul>
                         <li><b>Package:</b>A monthly workout plan with monthly nutrition plan, as well as in-person session.</li>
                         <li><b>Bundle:</b> &#8369;14,999.99 for 30 1-hour in-person sessions</li>
                         <li><b>Bundle:</b> &#8369;7,499.99 for 15 1-hour in-person sessions</li>
-                        <li><b>Custom Workout Plan:</b> Receive a workout plan designed just for you.</li>
                         <li><b>Custom Workout Plan:</b> Receive a workout plan designed just for you.</li>
                         <li><b>Dietary Tips:</b> Basic nutrition advice to support your fitness goals.</li>
                         <li><b>Flexible Scheduling:</b> Arrange sessions to fit your availability. Meet me at least once a week.</li>
