--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -188,7 +188,7 @@
                             <h5><a href="/blog-details3">Effective HIIT Workouts for Fat Loss</a></h5>
                             <ul>
                                 <li>by Amiel De Los Reyes</li>
-                                <li>October 21, 2023</li>
+                                <li>Oct 21, 2023</li>
 <!--                                <li>20 Comment</li>-->
                             </ul>
                             <p>High-Intensity Interval Training (HIIT) has gained immense popularity in the fitness world, and for good reason...</p>
@@ -199,10 +199,10 @@
                             <img src="img/blog/mind.png" alt="">
                         </div>
                         <div class="bi-text">
-                            <h5><a href="/blog-details4">Mental Toughness and Fitness Success: The Power of Your Mind...</a></h5>
+                            <h5><a href="/blog-details4">Mental Toughness and Fitness Success: The Power of Your Mind</a></h5>
                             <ul>
                                 <li>by Amiel De Los Reyes</li>
-                                <li>October 21, 2023</li>
+                                <li>Oct 21, 2023</li>
                             </ul>
                             <p>When we talk about achieving fitness success, we often focus on physical aspects like exercise routines and diet plans... </p>
                         </div>
@@ -215,7 +215,7 @@
                             <h5><a href="/blog-details5">The Role of Sleep in Fitness and Recovery...</a></h5>
                             <ul>
                                 <li>by Amiel De Los Reyes</li>
-                                <li>October 21, 2023</li>
+                                <li>Oct 21, 2023</li>
                             </ul>
                             <p>When it comes to achieving your fitness goals, you might focus on your workout routines, nutrition, and supplements...</p>
                         </div>
@@ -232,22 +232,22 @@
                         <div class="so-categories">
                             <h5 class="title">Categories</h5>
                             <ul>
-                                <li><a href="#">Yoga <span>12</span></a></li>
-                                <li><a href="#">Runing <span>32</span></a></li>
-                                <li><a href="#">Weightloss <span>86</span></a></li>
-                                <li><a href="#">Cario <span>25</span></a></li>
-                                <li><a href="#">Body buiding <span>36</span></a></li>
-                                <li><a href="#">Nutrition <span>15</span></a></li>
+                                <li><a href="#">Motivation <span>2</span></a></li>
+                                <li><a href="#">Sleep <span>1</span></a></li>
+                                <li><a href="#">Weight Loss <span>1</span></a></li>
+                                <li><a href="#">Nutrition <span>1</span></a></li>
+<!--                                <li><a href="#">Body buiding <span>36</span></a></li>-->
+<!--                                <li><a href="#">Nutrition <span>15</span></a></li>-->
                             </ul>
                         </div>
                         <div class="so-latest">
                             <h5 class="title">Feature posts</h5>
-                            <div class="latest-large set-bg" data-setbg="img/letest-blog/latest-1.jpg">
+                            <div class="latest-large set-bg" data-setbg="img/letest-blog/baki2.png">
                                 <div class="ll-text">
-                                    <h5><a href="/blog-details">This Japanese Way of Making Iced Coffee Is a Game...</a></h5>
+                                    <h5><a href="/blog-details">Use That Chip On Your Shoulder To Be Great...</a></h5>
                                     <ul>
-                                        <li>Aug 20, 2019</li>
-                                        <li>20 Comment</li>
+                                        <li>Oct 20, 2023</li>
+<!--                                        <li>20 Comment</li>-->
                                     </ul>
                                 </div>
                             </div>
@@ -256,8 +256,8 @@
                                     <img src="img/letest-blog/latest-2.jpg" alt="">
                                 </div>
                                 <div class="li-text">
-                                    <h6><a href="/blog-details">Grilled Potato and Green Bean Salad</a></h6>
-                                    <span class="li-time">Aug 15, 2019</span>
+                                    <h6><a href="/blog-details2">Nutrition Tips for Muscle Mass and Strength</a></h6>
+                                    <span class="li-time">Aug 11, 2023</span>
                                 </div>
                             </div>
                             <div class="latest-item">
@@ -265,8 +265,8 @@
                                     <img src="img/letest-blog/latest-3.jpg" alt="">
                                 </div>
                                 <div class="li-text">
-                                    <h6><a href="/blog-details">The $8 French Rosé I Buy in Bulk Every Summer</a></h6>
-                                    <span class="li-time">Aug 15, 2019</span>
+                                    <h6><a href="/blog-details3">Effective HIIT Workouts for Fat Loss</a></h6>
+                                    <span class="li-time">Oct 21, 2023</span>
                                 </div>
                             </div>
                             <div class="latest-item">
@@ -274,8 +274,8 @@
                                     <img src="img/letest-blog/latest-4.jpg" alt="">
                                 </div>
                                 <div class="li-text">
-                                    <h6><a href="/blog-details">Ina Garten's Skillet-Roasted Lemon Chicken</a></h6>
-                                    <span class="li-time">Aug 15, 2019</span>
+                                    <h6><a href="/blog-details4">Mental Toughness and Fitness Success: The Power of Your Mind</a></h6>
+                                    <span class="li-time">Oct 21, 2023</span>
                                 </div>
                             </div>
                             <div class="latest-item">
@@ -290,14 +290,14 @@
                         </div>
                         <div class="so-tags">
                             <h5 class="title">Popular tags</h5>
-                            <a href="#">Gyming</a>
-                            <a href="#">Body buidling</a>
-                            <a href="#">Yoga</a>
-                            <a href="#">Weightloss</a>
-                            <a href="#">Proffeponal</a>
-                            <a href="#">Streching</a>
+                            <a href="#">Motivation</a>
+                            <a href="#">Mindset</a>
+                            <a href="#">Nutrition</a>
+                            <a href="#">Weight Loss</a>
+                            <a href="#">Recovery</a>
+                            <a href="#">Body Building</a>
                             <a href="#">Cardio</a>
-                            <a href="#">Karate</a>
+                            <a href="#">Body Building</a>
                         </div>
                     </div>
                 </div>
