--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -103,7 +103,7 @@
 				  }
 			  }
             </script>
-            <button type="submit" onclick="validateEmail(); return false;">Sign Up</button>
+            <button type="submit" onclick="validateEmail(); return true;">Sign Up</button>
           </form>
         </div>
       </div>
