--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -233,7 +233,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="class-item">
                         <div class="ci-pic">
-                            <img src="img/gympic21.png" alt="">
+                            <img src="img/gympic22.png" alt="">
                         </div>
                         <div class="ci-text">
                             <span>INTERMEDIATE</span>
@@ -245,7 +245,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="class-item">
                         <div class="ci-pic">
-                            <img src="img/gympic.png" alt="">
+                            <img src="img/j2.png" alt="">
                         </div>
                         <div class="ci-text">
                             <span>ADVANCED</span>
